Refactor Main class to extend Application and display character information in a JavaFX window